@@ -38,6 +38,7 @@ Unreleased Version 2.2.2-pre
  * Feature: Pan or "hand" tool. Lets you move the canvas around by clicking. Thanks DeeJii for suggesting.
  * Fix: Don't move view position when pressing side buttons in small screen mode.
  * Feature: Show a proper explanation when you can't join a session.
+ * Fix: Make autosave interval actually be in minutes, not in seconds because that's ridiculous. Thanks D'mitri for reporting.
 
 2024-02-25 Version 2.2.2-beta.1
  * Server Feature: Allow adding a message when kicking someone through the admin API.
